# signed_size

./: CMakeLists.txt  README.md  TODO.md  signed_size.h
include/: signed_size.h
test/: CMakeLists.txt  signed_size_test.cpp
